--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -91,12 +91,13 @@
   }
 }
 .logo {
-  margin-top: 32px;
+  margin-top: 0px;
   @media #{$md-layout} {
-    margin-top: 0;
+    margin-top: 0px;
   }
   @media #{$xs-layout} {
-    margin-top: 0;
+    margin-top: 0px;
+    padding-top: 0px;
   }
   &.logo-hm5 {
     margin-top: 41px;
