--- a/src/assets/scss/_brand-logo.scss
+++ b/src/assets/scss/_brand-logo.scss
@@ -14,7 +14,7 @@
   .single-brand-logo2 {
     text-align: center;
     img {
-      filter: grayscale(100%);
+      // filter: grayscale(100%);
       transition: all 0.5s ease 0s;
     }
     &:hover img {
