--- a/src/assets/scss/_product.scss
+++ b/src/assets/scss/_product.scss
@@ -3902,3 +3902,13 @@
   background-color: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
+
+
+ul {
+  list-style-type: disc; /* or whatever style you want */
+  padding-left: 20px;
+}
+li {
+  margin-bottom: 8px;
+}
