new updets banners

--- a/src/assets/scss/_sidebar.scss
+++ b/src/assets/scss/_sidebar.scss
@@ -296,3 +296,12 @@
     }
   }
 }
+.shop-side-banner{
+  width: 100%;
+    height: 300px;
+    background: red;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+}
