new updets bannrs

--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -182,3 +182,12 @@
     }
   }
 }
+
+.contact-banner {
+  width: 100%;
+  height: 600px;
+  background: url("../../../public/assets/img/banner/contact.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
