new updets bannerss

--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -186,7 +186,7 @@
 .contact-banner {
   width: 100%;
   height: 600px;
-  background: url("../../../public/assets/img/banner/contact.png");
+  background: url("../../../public/assets/img/banner/contact.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
