--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -196,7 +196,7 @@
 .about-banner{
   width: 100%;
   height: 600px;
-  background: url("../../../public/assets/img/banner/about.png");
+  background: url("../../../public/assets/img/banner/about.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
