--- a/src/assets/scss/_sidebar.scss
+++ b/src/assets/scss/_sidebar.scss
@@ -298,8 +298,8 @@
 }
 .shop-side-banner{
   width: 100%;
-    height: 300px;
-    background: red;
+    height: 400px;
+    background: url("../../../public/assets/img/banner/shop.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
