--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -201,3 +201,61 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+// new scss 
+.about-mission-area {
+  padding: 50px 0;
+
+  .vision-content,
+  .mission-content {
+    text-align: left;
+
+    h2 {
+      font-size: 28px;
+      font-weight: bold;
+      margin-bottom: 15px;
+    }
+
+    p {
+      font-size: 16px;
+      line-height: 1.6;
+      color: #555;
+    }
+  }
+
+  .vision-image img,
+  .mission-image img {
+    border-radius: 8px;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+
+  @media (max-width: 768px) {
+    .row {
+      flex-direction: column;
+      align-items: stretch;
+
+      .col-lg-6,
+      .col-md-6 {
+        width: 100%;
+        margin-bottom: 20px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    .vision-content,
+    .vision-image,
+    .mission-content,
+    .mission-image {
+      margin-bottom: 20px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
