--- a/src/assets/scss/_product.scss
+++ b/src/assets/scss/_product.scss
@@ -3996,8 +3996,8 @@ input[type="radio"] {
   background-color: #45a049; /* Darker green on hover */
 }
 
-.order-status-section {
-  height: 100vh; /* Full viewport height */
-  min-height: 600px; /* Ensure a minimum height */
-  padding: 20px; /* Optional padding */
-}
+// .order-status-section {
+//   height: 100vh; /* Full viewport height */
+//   min-height: 600px; /* Ensure a minimum height */
+//   padding: 20px; /* Optional padding */
+// }
