changes with new ui

--- a/src/assets/scss/_product-details.scss
+++ b/src/assets/scss/_product-details.scss
@@ -589,10 +589,10 @@
       color: #fff;
       border-radius: 3px;
       &.pink {
-        background-color: #fa6bff;
+        background-color: #065b17;
       }
       &.purple {
-        background-color: #a749ff;
+        background-color: #187816;
       }
     }
   }
