--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -29,7 +29,7 @@
 @import "checkout";
 @import "contact";
 @import "blog-details";
-@import "login-register";
+// @import "login-register";
 @import "my-account";
 @import "404";
 @import "video-popup";
